syntax = "proto3";
package clai.v1;

option go_package = "github.com/runger/clai/gen/clai/v1;claiv1";

// ---------------------------------------------------------
// Common
// ---------------------------------------------------------

message ClientInfo {
  string version = 1;
  string os = 2;        // darwin, linux, windows
  string shell = 3;     // zsh, bash, pwsh
  string hostname = 4;  // machine hostname
  string username = 5;  // current user
}

message Ack {
  bool ok = 1;
  string error = 2;     // populated if ok=false
}

// ApiError provides structured error details per Section 13.3 error model.
// Standard codes: E_INVALID_ARGUMENT, E_DAEMON_UNAVAILABLE, E_STORAGE_BUSY,
// E_STORAGE_CORRUPT, E_TIMEOUT, E_UNSUPPORTED_TTY, E_INTERNAL.
message ApiError {
  string code = 1;        // Machine-readable error code (e.g. "E_TIMEOUT")
  string message = 2;     // Human-readable error description
  bool retryable = 3;     // Whether the client should retry
}

// ---------------------------------------------------------
// Session Lifecycle
// ---------------------------------------------------------

message SessionStartRequest {
  ClientInfo client = 1;
  string session_id = 2;          // UUID v4 generated by clai-shim
  string cwd = 3;
  int64 started_at_unix_ms = 4;
}

message SessionEndRequest {
  string session_id = 1;
  int64 ended_at_unix_ms = 2;
}

message AliasSyncRequest {
  string session_id = 1;
  string shell = 2;
  string raw_snapshot = 3;  // Raw output from alias/abbr command.
}

// ---------------------------------------------------------
// Command Lifecycle (Phase 1: No Output Capture)
// ---------------------------------------------------------

message CommandStartRequest {
  string session_id = 1;
  string command_id = 2;    // UUID v4
  int64 ts_unix_ms = 3;
  string cwd = 4;
  string command = 5;       // Raw command string

  // Git context (optional, captured by shell shim)
  string git_branch = 6;
  string git_repo_name = 7;
  string git_repo_root = 8;

  // Sequence tracking
  string prev_command_id = 9;
}

message CommandEndRequest {
  string session_id = 1;
  string command_id = 2;
  int64 ts_unix_ms = 3;
  int32 exit_code = 4;
  int64 duration_ms = 5;
  // NOTE: stdout/stderr fields removed for Phase 1 stability
}

// ---------------------------------------------------------
// Suggestions
// ---------------------------------------------------------

message SuggestRequest {
  string session_id = 1;
  string cwd = 2;
  string buffer = 3;        // Current typing buffer (prefix)
  int32 cursor_pos = 4;     // Cursor position in buffer
  bool include_ai = 5;      // Request AI suggestions (explicit trigger)
  int32 max_results = 6;    // Max suggestions to return (default: 5)

  // V2 fields: last-command context for improved suggestion ranking
  string repo_key = 7;              // Repository identifier for scoped suggestions
  string last_cmd_raw = 8;          // Raw text of the last executed command
  string last_cmd_norm = 9;         // Normalized form of the last executed command
  int64 last_cmd_ts_ms = 10;        // Timestamp of last command (unix ms)
  int64 last_event_seq = 11;        // Monotonic event sequence number
  bool include_low_confidence = 12; // Include lower-confidence suggestions
}

message Suggestion {
  string text = 1;              // The suggested command
  string description = 2;       // Optional description
  string source = 3;            // "session", "cwd", "global", "ai"
  double score = 4;             // Ranking score (0.0 to 1.0)
  string risk = 5;              // "safe", "destructive", or empty

  // V2 fields: per-suggestion enrichment
  string cmd_norm = 6;                    // Normalized command form
  double confidence = 7;                  // Confidence score (0.0 to 1.0)
  repeated SuggestionReason reasons = 8;  // Why this suggestion was ranked here
}

// SuggestionReason explains why a particular suggestion was ranked.
message SuggestionReason {
  string type = 1;           // Reason type (e.g. "recency", "frequency", "cwd_match")
  string description = 2;   // Human-readable description
  float contribution = 3;   // Weight contribution to final score (0.0 to 1.0)
}

// TimingHint provides adaptive timing information for shell integrations.
message TimingHint {
  string user_speed_class = 1;           // e.g. "fast", "moderate", "slow"
  int32 suggested_pause_threshold_ms = 2; // Suggested pause before showing suggestions
}

message SuggestResponse {
  repeated Suggestion suggestions = 1;
  bool from_cache = 2;          // True if served from cache

  // V2 fields: response-level metadata
  string cache_status = 3;     // "hit", "miss", "stale" (more granular than from_cache)
  int64 latency_ms = 4;        // Server-side processing time
  TimingHint timing_hint = 5;  // Adaptive timing guidance for shell integration
}

// ---------------------------------------------------------
// Feedback
// ---------------------------------------------------------

// RecordFeedbackRequest captures user feedback on suggestions.
// Primary feedback path is automatic from shell integrations.
message RecordFeedbackRequest {
  string session_id = 1;      // Session that generated the suggestion
  string action = 2;          // "accepted", "dismissed", "edited", "never", "unblock"
  string suggested_text = 3;  // The suggestion that was shown
  string executed_text = 4;   // What the user actually executed (for "edited")
  string prefix = 5;          // The prefix/buffer when suggestion was shown
  int64 latency_ms = 6;       // Time from suggestion display to user action
}

// RecordFeedbackResponse confirms feedback recording.
message RecordFeedbackResponse {
  bool ok = 1;
  ApiError error = 2;         // Structured error if ok=false
}

// ---------------------------------------------------------
// Text-to-Command (AI)
// ---------------------------------------------------------

message TextToCommandRequest {
  string session_id = 1;
  string prompt = 2;            // Natural language prompt
  string cwd = 3;
  int32 max_suggestions = 4;    // Default: 3
}

message TextToCommandResponse {
  repeated Suggestion suggestions = 1;
  string provider = 2;          // Which AI provider was used
  int64 latency_ms = 3;         // AI response time
}

// ---------------------------------------------------------
// Next Step Prediction
// ---------------------------------------------------------

message NextStepRequest {
  string session_id = 1;
  string last_command = 2;
  int32 last_exit_code = 3;
  string cwd = 4;
}

message NextStepResponse {
  repeated Suggestion suggestions = 1;
}

// ---------------------------------------------------------
// Diagnosis
// ---------------------------------------------------------

message DiagnoseRequest {
  string session_id = 1;
  string command = 2;
  int32 exit_code = 3;
  string cwd = 4;
}

message DiagnoseResponse {
  string explanation = 1;       // Human-readable explanation
  repeated Suggestion fixes = 2; // Suggested fix commands
}

// ---------------------------------------------------------
// History / Search
// ---------------------------------------------------------

// SearchMode controls the search strategy for history queries.
enum SearchMode {
  SEARCH_MODE_UNSPECIFIED = 0;  // Default: auto-detect best strategy
  SEARCH_MODE_FTS = 1;          // Full-text search (SQLite FTS5)
  SEARCH_MODE_PREFIX = 2;       // Prefix/LIKE scan
  SEARCH_MODE_DESCRIBE = 3;     // Tag-based descriptive search (no LLM)
  SEARCH_MODE_AUTO = 4;         // Auto-select best backend
}

message HistoryFetchRequest {
  string session_id = 1;   // Optional: filter by session (UUID v4)
  string query = 2;        // Substring filter (provider-side)
  int32  limit = 3;        // Page size
  int32  offset = 4;       // Pagination offset
  bool   global = 5;       // True = all sessions

  // V2 fields: extended search capabilities
  string repo_key = 6;     // Filter by repository
  SearchMode mode = 7;     // Search strategy (fts, prefix, describe, auto)
  string scope = 8;        // "session", "repo", "global"
}

message HistoryFetchResponse {
  repeated HistoryItem items = 1;
  bool at_end = 2;

  // V2 fields: search metadata
  int64 latency_ms = 3;   // Server-side search time
  string backend = 4;     // Which backend served the query ("fts5", "fallback")
}

message HistoryItem {
  string command = 1;
  int64  timestamp_ms = 2;

  // V2 fields: enriched result data
  string cmd_norm = 3;           // Normalized command form
  string repo_key = 4;           // Repository key for this command
  double rank_score = 5;         // Relevance score from search
  repeated string tags = 6;      // Descriptive tags for the command
  repeated string matched_tags = 7; // Tags that matched the query
}

message HistoryImportRequest {
  string shell = 1;           // "bash", "zsh", "fish", or "auto"
  string history_path = 2;    // Optional custom path (empty = default)
  bool if_not_exists = 3;     // Skip if already imported for this shell
  bool force = 4;             // Replace existing import
}

message HistoryImportResponse {
  int32 imported_count = 1;   // Number of entries imported
  bool skipped = 2;           // True if skipped due to if_not_exists
  string error = 3;           // Error message if failed
}

// ---------------------------------------------------------
// Status
// ---------------------------------------------------------

message StatusResponse {
  string version = 1;
  int32 active_sessions = 2;
  int64 uptime_seconds = 3;
  int64 commands_logged = 4;
}

// ---------------------------------------------------------
// Workflow Lifecycle — Tier 0 (§13.1)
// ---------------------------------------------------------

message WorkflowRunStartRequest {
  string run_id = 1;
  string workflow_name = 2;
  string workflow_hash = 3;       // SHA-256 of YAML content (M12)
  string workflow_path = 4;
  int64 started_at_unix_ms = 5;   // Client-provided timestamp (M18)
}

message WorkflowRunStartResponse {
  bool ok = 1;
  string error = 2;
}

message WorkflowRunEndRequest {
  string run_id = 1;
  string status = 2;              // "passed", "failed", "cancelled"
  int64 ended_at_unix_ms = 3;
  int64 duration_ms = 4;
}

message WorkflowRunEndResponse {
  bool ok = 1;
  string error = 2;
}

message WorkflowStepUpdateRequest {
  string run_id = 1;
  string step_id = 2;
  string matrix_key = 3;          // Composite key per D16
  string status = 4;              // "running", "passed", "failed", "skipped"
  string command = 5;
  int32 exit_code = 6;
  int64 duration_ms = 7;
  string stdout_tail = 8;         // Last 4KB
  string stderr_tail = 9;         // Last 4KB
  string outputs_json = 10;       // JSON-encoded step outputs
}

message WorkflowStepUpdateResponse {
  bool ok = 1;
  string error = 2;
}

message AnalyzeStepOutputRequest {
  string run_id = 1;
  string step_id = 2;
  string matrix_key = 3;
  string step_name = 4;
  string risk_level = 5;          // "low", "medium", "high"
  string scrubbed_output = 6;     // ≤100KB scrubbed context (C5)
  string analysis_prompt = 7;     // Optional custom prompt
}

message AnalyzeStepOutputResponse {
  string decision = 1;            // "approve", "reject", "needs_human", "error"
  string reasoning = 2;
  string flags_json = 3;          // JSON-encoded flags
}

// ---------------------------------------------------------
// Service
// ---------------------------------------------------------

service ClaiService {
  // Fire-and-Forget (Client ignores return)
  rpc SessionStart(SessionStartRequest) returns (Ack);
  rpc SessionEnd(SessionEndRequest) returns (Ack);
  rpc AliasSync(AliasSyncRequest) returns (Ack);
  rpc CommandStarted(CommandStartRequest) returns (Ack);
  rpc CommandEnded(CommandEndRequest) returns (Ack);

  // Interactive (Client waits with timeout)
  rpc Suggest(SuggestRequest) returns (SuggestResponse);
  rpc TextToCommand(TextToCommandRequest) returns (TextToCommandResponse);
  rpc NextStep(NextStepRequest) returns (NextStepResponse);
  rpc Diagnose(DiagnoseRequest) returns (DiagnoseResponse);

  // Feedback (V2)
  rpc RecordFeedback(RecordFeedbackRequest) returns (RecordFeedbackResponse);
  rpc SuggestFeedback(RecordFeedbackRequest) returns (RecordFeedbackResponse);

  // History
  rpc FetchHistory(HistoryFetchRequest) returns (HistoryFetchResponse);
  rpc ImportHistory(HistoryImportRequest) returns (HistoryImportResponse);

  // Ops
  rpc Ping(Ack) returns (Ack);
  rpc GetStatus(Ack) returns (StatusResponse);

  // Workflow RPCs — Tier 0 (§13.1)
  rpc WorkflowRunStart(WorkflowRunStartRequest) returns (WorkflowRunStartResponse);
  rpc WorkflowRunEnd(WorkflowRunEndRequest) returns (WorkflowRunEndResponse);
  rpc WorkflowStepUpdate(WorkflowStepUpdateRequest) returns (WorkflowStepUpdateResponse);
  rpc AnalyzeStepOutput(AnalyzeStepOutputRequest) returns (AnalyzeStepOutputResponse);
}
